--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html> 
-<HEAD>
-<TITLE>Welcome - Rem and Ethan Says</TITLE>
-<link rel="icon" href="favicon.png" type="image/x-icon"> 
- <media="screen and (max-device-width: 800px)" />
-<meta name="description" content="This is the homepage">
-</HEAD>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <title>Welcome - Ethan And Rem Say</title>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-<p> YOOO WE STARTING</p>
+ <p> YOOO WE STARTING</p>
