--- a/monkey.html
+++ b/monkey.html
@@ -9,4 +9,6 @@
       
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <p align="center">
 <img src="https://i.pinimg.com/originals/17/15/f3/1715f3efbfab1081e2fb850c8233ffda.gif">
+    </p>
