--- a/index.html
+++ b/index.html
@@ -31,4 +31,7 @@
         </div>
     </nav>
     
-    <p> YOOO WE STARTING</p>
+ <!-- Header -->
+    <h1 align="center">
+        Rem And Ethan's Site
+    </h1>
