--- a/monkey.html
+++ b/monkey.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
       
     <link rel="stylesheet" type="text/css" href="style.css">
+    
+    <link rel="icon" href="Assets/favicon.ico" type="image/x-icon"> 
 
     <p align="center">
 <img src="https://i.pinimg.com/originals/17/15/f3/1715f3efbfab1081e2fb850c8233ffda.gif">
