--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </nav>
     
  <!-- Header -->
-    <h1 align="center">
-        Rem And Ethan's Site
-    </h1>
+   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Rem And Ethans Site</h1>
+        <p class="lead">We do not condone the use of this in school. Dont fail pls</p>
+    </div>
