--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <div class="card-deck mb-3 text-center">
             <div class="card square mb-4">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Unblock Games</h4>
+                    <h4 class="my-0 font-weight-normal">Games</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">Try Now!<small class="text-muted"></small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Over 20 games!</li>
+                        <li>very cools</li>
                         <li>2 GB of games</li>
-                        <li>Email not support</li>
-                        <li>Help center access not supported</li>
+                        <li>only 0 cents</li>
+                        <li>All countries should reduce arms in the name of public safety.</li>
                     </ul>
