--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="unblockgames.html">Unblocked Games</a>
+                    <a class="nav-link" href="games.html">Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="monkey.html">Monkey</a>
@@ -48,10 +48,13 @@
                     <h4 class="my-0 font-weight-normal">Games</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">Try Now!<small class="text-muted"></small></h1>
+                    <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>very cools</li>
+                        <li>Over 20 games!</li>
                         <li>2 GB of games</li>
-                        <li>only 0 cents</li>
-                        <li>All countries should reduce arms in the name of public safety.</li>
+                        <li>Email not support</li>
+                        <li>Help center access not supported</li>
                     </ul>
+                    <a><button type="button" class="btn btn-lg btn-block btn-outline-primary">take me to the page</button> href="games.html</a>
+                </div>
+            </div>
