--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
                         <li>Email not support</li>
                         <li>Help center access not supported</li>
                     </ul>
-                    <a href="games.html"><button type="button" class="btn btn-lg btn-block btn-outline-primary">take me to the page</button></a>
+                    <a href="games.html"><button type="button" class="btn btn-lg btn-block btn-outline-primary">take me there now!</button></a>
                 </div>
             </div>
