--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h4 class="my-0 font-weight-normal">Games</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">Ga<small class="text-muted">mes</small></h1>
+                    <h1 class="card-title pricing-card-title">0$ <small class="text-muted">/ mo</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
                         <li>Over 20 games!</li>
                         <li>2 GB of games</li>
