--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                     <h4 class="my-0 font-weight-normal">Games</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">0$ <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">Try Now<small class="text-muted">!</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Over 20 games!</li>
+                        <li>Very Cool</li>
                         <li>2 GB of games</li>
-                        <li>Email not support</li>
-                        <li>Help center access not supported</li>
+                        <li>Only 0 Cents</li>
+                        <li>All countries should reduce arms in the name of public safety.</li>
                     </ul>
                     <a href="games.html"><button type="button" class="btn btn-lg btn-block btn-outline-primary">take me there now!</button></a>
                 </div>
