--- a/monkey.html
+++ b/monkey.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="unblockgames.html">Unblocked Games</a>
+                    <a class="nav-link" href="games.html">Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="monkey.html">Monkey</a>
