--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <footer class="taskbar">
         <div class="row" style="margin-right: 0px;">
             <div class="col-8">
-                <a href="creators.html"><img src="assets/icons/users-1.png" class="icon-16">Creators</a>
+                <a href="creators.html"><img src="https://alexbsoft.github.io/win95.css/assets/icons/users-1.png" class="icon-16">Creators</a>
                 <a href="https://github.com/BlueSquid10/RemAndEthan_Site" class="btn start-button"><img src="https://icons-for-free.com/iconfiles/png/512/github+icon-1320168274457504277.png" class="icon-16"> GitHub</a>
             </div>
             <div class="col-4 time">By Alex B</div>
