--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     
     <link rel="icon" href="Assets/favicon.ico" type="image/x-icon"> 
-
+    
+<body class="windows-scrollbar">
  <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-95 ">
         <a class="navbar-brand" href="#">
@@ -75,12 +76,10 @@
 <footer class="taskbar">
         <div class="row" style="margin-right: 0px;">
             <div class="col-8">
-                <a href="creators.html"><img src="https://alexbsoft.github.io/win95.css/assets/icons/users-1.png" class="icon-16"> Creators</a>
                 <a href="https://github.com/BlueSquid10/RemAndEthan_Site" class="btn start-button"><img src="https://icons-for-free.com/iconfiles/png/512/github+icon-1320168274457504277.png" class="icon-16"> GitHub</a>
             </div>
-            <div class="col-4 time">By Alex B</div>
+            <div class="col-4 time">By Ethan And Rem</div>
         </div>
-
     </footer>
 </body>
 
