--- a/monkey.html
+++ b/monkey.html
@@ -37,3 +37,16 @@
     <p align="center">
 <img src="https://i.pinimg.com/originals/17/15/f3/1715f3efbfab1081e2fb850c8233ffda.gif">
     </p>
+    
+     <!-- Footer -->
+<footer class="taskbar">
+        <div class="row" style="margin-right: 0px;">
+            <div class="col-8">
+                <a href="https://github.com/BlueSquid10/RemAndEthan_Site" class="btn start-button"><img src="https://icons-for-free.com/iconfiles/png/512/github+icon-1320168274457504277.png" class="icon-16"> GitHub</a>
+            </div>
+            <div class="col-4 time">By Ethan And Rem</div>
+        </div>
+</footer>
+</body>
+
+</html>
