--- a/index.html
+++ b/index.html
@@ -115,6 +115,28 @@
                     </div>
         </div>
     </div>
+  
+<!-- Others -->
+             <div class="container">
+        <div class="card mb-4">
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Other stuff</h4>
+            </div>
+            <div class="card-body">
+                
+                <a class="btn btn-primary " href="monkey background.html-background.html">
+                    <img src="assets/icons/video_-0.png" class="icon-16"> Monkey Background
+                </a>
+                <p>Monkey in the back.</p>
+				
+				<a class="btn btn-primary " href="monkey.html">
+                    <img src="assets/icons/world_network_directories-1.png" class="icon-16"> Monkey
+                </a>
+                <p>Monkey monkey monkey oga boga</p>
+            </div>
+        </div>
+    </div>
+
 
  <!-- Footer -->
 <footer class="taskbar">
