--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
             <div class="card-body">
                 
                 <a class="btn btn-primary " href="monkey background.html-background.html">
-                    <img src="assets/icons/video_-0.png" class="icon-16"> Monkey Background
+                    <img src="https://media1.tenor.com/images/175fe40bd52558d9c0b90048fb7868ef/tenor.gif" class="icon-16"> Monkey Background
                 </a>
                 <p>Monkey in the back.</p>
 				
 				<a class="btn btn-primary " href="monkey.html">
-                    <img src="assets/icons/world_network_directories-1.png" class="icon-16"> Monkey
+                    <img src="https://i.pinimg.com/originals/17/15/f3/1715f3efbfab1081e2fb850c8233ffda.gif" class="icon-16"> Monkey
                 </a>
                 <p>Monkey monkey monkey oga boga</p>
             </div>
