--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="card-header">
                 <h4 class="my-0 font-weight-normal">Digits of pi</h4>
             </div>
-            <div class="card-body windows-scrollbar" style="overflow-y: scroll; height:100px;">
+            <div class="card-body windows-scrollbar" style="overflow-y: scroll; height:300px;">
                 <h5>3.14159265358979323846264338327950288419716939937510582097494459230781640
                     6286208998628034825342117067982148086513282306647093844609550582231725359
                     408128481117450284102701938521105559644622948954930381964428810975665933
@@ -137,7 +137,7 @@
 
  <!-- Footer -->
 <footer class="taskbar">
-        <div class="row" style="margin-right: 0px;">
+        <div class="row" style="margin-left: 100px;">
             <div class="col-8">
                 <a href="https://github.com/BlueSquid10/RemAndEthan_Site" class="btn start-button"><img src="https://icons-for-free.com/iconfiles/png/512/github+icon-1320168274457504277.png" class="icon-16"> GitHub</a>
             </div>
