--- a/monkey.html
+++ b/monkey.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-95 ">
         <a class="navbar-brand" href="#">
-            <img src="assets/icons/computer-3.png"> Monkey</a>
+            <img src="Assets/favicon.ico"> Monkey</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,10 +25,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="games.html">Games</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="monkey.html">Monkey</a>
-                </li>
             </ul>
         </div>
     </nav>
