--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <div class="card-body">
                 
-                <a class="btn btn-primary " href="monkey background.html-background.html">
+                <a class="btn btn-primary " href="monkeybackground.html">
                     <img src="https://media1.tenor.com/images/175fe40bd52558d9c0b90048fb7868ef/tenor.gif" class="icon-16"> Monkey Background
                 </a>
                 <p>Monkey in the back.</p>
