--- a/monkeybackground.html
+++ b/monkeybackground.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-95 ">
         <a class="navbar-brand" href="#">
-            <img src="Assets/favicon.ico"> Monkey</a>
+            <img src="Assets/favicon.ico"> Monkey Background</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,13 +33,13 @@
  <header class="mb-5">
   
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="https://media1.tenor.com/images/175fe40bd52558d9c0b90048fb7868ef/tenor.gif" type="video/gif">
+    <source src="https://drive.google.com/file/d/12SsLOw4hX01YbzcbxzYs_L4mzgfuvcS7/preview" type="video/mp4">
   </video>
   <div class="container h-100">
     <div class="d-flex justify-content-center h-100 align-items-center">
       <div class="card" style="width: 60vh;">
               <div class="card-header icon">
-                <h4 class="my-0 font-weight-normal "><img src="assets/icons/note-0.png"> Monkey</h4>
+                <h4 class="my-0 font-weight-normal "> Monkey</h4>
               </div>
               <div class="card-body">
                 <ul class="list-unstyled mt-3 mb-4">
