--- a/monkeybackground.html
+++ b/monkeybackground.html
@@ -32,7 +32,7 @@
   <!-- Monkey Background -->
  <header class="mb-5">
   
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+  <video playsinline="playsinline" autoplay="autoplay" muted="false" loop="loop">
     <source src="Assets/monkeybackground.mp4" type="video/mp4">
   </video>
   <div class="container h-100">
